After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760423 - [PATCH] gio-querymodules prints error messages as question marks on some locales
[PATCH] gio-querymodules prints error messages as question marks on some locales
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.49.x
Other FreeBSD
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2016-01-11 05:52 UTC by Ting-Wei Lan
Modified: 2016-07-14 03:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gio-querymodules: Call setlocale in main function (901 bytes, patch)
2016-01-11 05:54 UTC, Ting-Wei Lan
committed Details | Review

Description Ting-Wei Lan 2016-01-11 05:52:14 UTC
Please see the attached patch. gio-querymodules should call setlocale in main function in order to correctly show translated messages.

Running 'gio-querymodules /nonexistent' with zh_TW.UTF-8 locale shows:
Unable to open directory /nonexistent: ?????/nonexistent???????No such file or directory
Comment 1 Ting-Wei Lan 2016-01-11 05:54:11 UTC
Created attachment 318691 [details] [review]
gio-querymodules: Call setlocale in main function

It is required to correctly show translated messages on some locales.
Comment 2 Ting-Wei Lan 2016-07-13 16:27:56 UTC
Does someone have time to review this trivial patch? It has missed a release and stayed in bugzilla for 6 months.
Comment 3 Matthias Clasen 2016-07-13 23:00:37 UTC
Review of attachment 318691 [details] [review]:

Sure, looks fine. Sorry for the delay
Comment 4 Ting-Wei Lan 2016-07-14 03:26:59 UTC
Attachment 318691 [details] pushed as cef7993 - gio-querymodules: Call setlocale in main function