gio/gio-querymodules.c
@@ -23,6 +23,7 @@
 
 #include <gstdio.h>
 #include <errno.h>
+#include <locale.h>
 
 static gboolean
 is_valid_module_name (const gchar *basename)
@@ -133,6 +134,8 @@ main (gint   argc,
       g_print ("Will update giomodule.cache in the listed directories\n");
       return 1;
     }
+
+  setlocale (LC_ALL, "");
 
   /* Be defensive and ensure we're linked to GObject */
   g_type_ensure (G_TYPE_OBJECT);
